# Twitter-API-Project

./: .editorconfig  .gitignore  README.md  docker-compose.yml  main.py  pyproject.toml  pytest.ini  teste.py
Web/: manage.py
Web/MyTweetPY/: asgi.py  settings.py  urls.py  wsgi.py
Web/home/templates/home/: index.html
Web/templates/: base.html
Web/templates/static/css/: style.css
Web/templates/static/tweets/: tweets_style.css
Web/tweets/: urls.py  views.py
Web/tweets/templates/tweets/: tweets.html
src/: connection.py  constants.py  services.py
